fix dark mode animation consistency

--- a/main/static/scss/gardenbase.scss
+++ b/main/static/scss/gardenbase.scss
@@ -3,17 +3,21 @@
 @import 'fonts';
 @import 'vars';
 
-* {
-  transition: 
-      color 0.3s ease, 
-      background 0.3s ease, 
-      border 0.3s ease,
-      outline 0.3s ease,
-      transform 0.1s ease-out,
-      box-shadow 0.1s ease, 
-      -webkit-box-shadow 0.1s ease, 
-      -moz-box-shadow 0.1s ease;
+
+.animatechange{
+  *, & {
+    transition: 
+        color 0.3s ease, 
+        background 0.3s ease, 
+        border 0.3s ease,
+        outline 0.3s ease,
+        transform 0.1s ease-out,
+        box-shadow 0.1s ease, 
+        -webkit-box-shadow 0.1s ease, 
+        -moz-box-shadow 0.1s ease;
+  }
 }
+
 
 body {
   margin: 0;
